# Balistic_Trajectory_exercise

./: CMakeLists.txt
TrejetoriaBalistica1/: CMakeLists.txt  TrejetoriaBalistica1.cpp  TrejetoriaBalistica1.h
