# CMakeList.txt: projeto de CMake para TrejetoriaBalistica1, incluir origem e definir
# lógica específica a um projeto aqui.
#
cmake_minimum_required (VERSION 3.8)

# Adicione a origem ao executável deste projeto.
add_executable (TrejetoriaBalistica1 "TrejetoriaBalistica1.cpp" "TrejetoriaBalistica1.h")

# TODO: Adicione testes e instale destinos, se necessário.
